<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<groupId>org.lunifera</groupId>
	<artifactId>org.lunifera</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Lunifera :: OSGi Components for Business Applications : Parent POM</name>

	<properties>
		<next-release>0.0.2-SNAPSHOT</next-release>
		<tycho-version>0.15.0</tycho-version>

		<eclipse-p2>http://download.eclipse.org/releases/juno</eclipse-p2>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<orbit-p2>http://download.eclipse.org/tools/orbit/downloads/drops/R20120526062928/repository/</orbit-p2>
		<xtext-p2>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</xtext-p2>
		<bpmn2-p2>https://hudson.eclipse.org/hudson/job/bpmn2-nightly/ws/org.eclipse.bpmn2.site/target/site/</bpmn2-p2>
		<gemini-jpa-p2>https://hudson.eclipse.org/hudson/job/gemini-jpa/lastSuccessfulBuild/artifact/org.eclipse.gemini.jpa.updatesite/target/repository/</gemini-jpa-p2>
		<m2e-buildhelper-p2>http://repository.tesla.io:8081/nexus/content/sites/m2e.extras/m2eclipse-buildhelper/0.15.0/N/0.15.0.201207090124/</m2e-buildhelper-p2>
		<m2e-tycho-p2>http://repository.tesla.io:8081/nexus/content/sites/m2e.extras/m2eclipse-tycho/0.6.0/N/0.6.0.201207302152/</m2e-tycho-p2>
	</properties>

	<developers>
		<developer>
			<id>cvgaviao</id>
			<name>Cristiano Gavião</name>
			<email>cvgaviao@gmail.com</email>
			<timezone>-3</timezone>
		</developer>
		<developer>
			<id>florianpirchner</id>
			<name>Florian Pirchner</name>
			<email>florian.pirchner@gmail.com</email>
			<timezone>+2</timezone>
		</developer>
		<developer>
			<id>haglo</id>
			<name>Hans-George Glöckler</name>
			<email>hans-georg.gloeckler@uni-ulm.de</email>
			<timezone>+2</timezone>
		</developer>
	</developers>

	<profiles>
		<profile>
			<id>prepare-for-next-release</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>org.eclipse.tycho:tycho-versions-plugin:set-version</defaultGoal>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-versions-plugin</artifactId>
						<version>${tycho-version}</version>
						<executions>
							<execution>
								<id>change-next-release</id>
								<goals>
									<goal>set-version</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<newVersion>${next-release}</newVersion>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>testAll</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en.tests</module>
				<module>org.lunifera.metamodel.dsl.business.processes.tests</module>
				<module>org.lunifera.metamodel.dsl.entity.tests</module>
				<module>org.lunifera.metamodel.dsl.organization.en.tests</module>
				<module>org.lunifera.metamodel.dsl.component.template.library.tests</module>
				<module>org.lunifera.metamodel.dsl.software.composition.tests</module>
			</modules>
			<repositories>
				<repository>
					<id>lastest_lunifera_built_p2</id>
					<url>file://${basedir}/../org.lunifera.p2.repo.juno/target/repository</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<layout>p2</layout>
				</repository>
			</repositories>
		</profile>		<profile>
			<id>entityModelDSL</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
<!-- 				<module>org.lunifera.feature.eclipse.modeling.entities</module> -->
				<module>org.lunifera.metamodel.entity</module>
				<module>org.lunifera.metamodel.dsl.entity</module>
				<module>org.lunifera.metamodel.dsl.entity.tests</module>
				<module>org.lunifera.metamodel.dsl.entity.ui</module>
			</modules>
		</profile>

		<profile>
			<id>organizationModeling</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<module>org.lunifera.feature.eclipse.modeling.organization</module>
				<module>org.lunifera.metamodel.dsl.organization.en</module>
				<module>org.lunifera.metamodel.dsl.organization.en.tests</module>
				<module>org.lunifera.metamodel.dsl.organization.en.ui</module>
				<module>org.lunifera.feature.eclipse.ui</module>
				<module>org.lunifera.eclipse.ui</module>
			</modules>
		</profile>

		<profile>
			<id>businessProcessModeling</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<module>org.lunifera.metamodel.dsl.business.processes</module>
				<module>org.lunifera.metamodel.dsl.business.processes.tests</module>
				<module>org.lunifera.metamodel.dsl.business.processes.ui</module>
			</modules>
			<repositories>
				<repository>
					<id>lastest_lunifera_built_p2</id>
					<url>file://${basedir}/../org.lunifera.p2.repo.juno/target/repository</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<layout>p2</layout>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>componentModelingTools</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<module>org.lunifera.feature.eclipse.modeling.components</module>
				<module>org.lunifera.metamodel.dsl.component.template.library</module>
				<module>org.lunifera.metamodel.dsl.component.template.library.tests</module>
				<module>org.lunifera.metamodel.dsl.component.template.library.ui</module>
				<module>org.lunifera.metamodel.dsl.software.composition</module>
				<module>org.lunifera.metamodel.dsl.software.composition.tests</module>
				<module>org.lunifera.metamodel.dsl.software.composition.ui</module>
			</modules>
			<repositories>
				<repository>
					<id>lastest_lunifera_built_p2</id>
					<url>file://${basedir}/../org.lunifera.p2.repo.juno/target/repository</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<layout>p2</layout>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>behaviorRequirementTools</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en</module>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en.tests</module>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en.ui</module>
				
			</modules>
			<repositories>
				<repository>
					<id>lastest_lunifera_built_p2</id>
					<url>file://${basedir}/../org.lunifera.p2.repo.juno/target/repository</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<layout>p2</layout>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>p2-juno</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<!-- exclusive for P2 -->
				<module>org.lunifera.p2.repo.juno</module>

				<!-- P2 features -->
				<module>org.lunifera.feature.eclipse.modeling.business_knowledge</module>
				<module>org.lunifera.feature.eclipse.modeling.behavior_requirements</module>
				<module>org.lunifera.feature.eclipse.modeling.entities</module>
				<module>org.lunifera.feature.eclipse.modeling.components</module>
				<module>org.lunifera.feature.eclipse.modeling.organization</module>
				<module>org.lunifera.feature.eclipse.ui</module>
				<!-- end P2 features -->

				<!-- P2 bundles -->
				<module>org.lunifera.eclipse.ui</module>
				<module>org.lunifera.metamodel.entity</module>
				<module>org.lunifera.metamodel.dsl.entity</module>
				<module>org.lunifera.metamodel.dsl.entity.tests</module>
				<module>org.lunifera.metamodel.dsl.entity.ui</module>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en</module>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en.tests</module>
				<module>org.lunifera.metamodel.dsl.behavior.stories.en.ui</module>
				<module>org.lunifera.metamodel.dsl.organization.en</module>
				<module>org.lunifera.metamodel.dsl.organization.en.tests</module>
				<module>org.lunifera.metamodel.dsl.organization.en.ui</module>
				<module>org.lunifera.metamodel.dsl.software.composition</module>
				<module>org.lunifera.metamodel.dsl.software.composition.tests</module>
				<module>org.lunifera.metamodel.dsl.software.composition.ui</module>
				<module>org.lunifera.metamodel.dsl.component.template.library</module>
				<module>org.lunifera.metamodel.dsl.component.template.library.tests</module>
				<module>org.lunifera.metamodel.dsl.component.template.library.ui</module>
				<module>org.lunifera.metamodel.dsl.business.processes</module>
				<module>org.lunifera.metamodel.dsl.business.processes.tests</module>
				<module>org.lunifera.metamodel.dsl.business.processes.ui</module>
				<!-- P2 bundles -->
			</modules>
		</profile>
		<profile>
			<id>ide-juno</id>
			<!-- This will generate a full eclipse IDE using a .product and getting 
				Lunifera bundles from latest generated p2. -->
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<defaultGoal>verify</defaultGoal>
			</build>
			<modules>
				<!-- exclusive for IDE -->
				<module>org.lunifera.feature.ide</module>
				<module>org.lunifera.ide.product</module>
				<!-- end exclusive for IDE -->

			</modules>
			<repositories>
				<repository>
					<id>lastest_lunifera_built_p2</id>
					<url>file://${basedir}/../org.lunifera.p2.repo.juno/target/repository</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<layout>p2</layout>
				</repository>

			</repositories>
		</profile>

		<profile>
			<id>target</id>
			<!-- This profile was create just to be able to import target project 
				into the IDE and provide ways to setup the workspace using m2e import, since 
				the tycho build is using p2 repos instead targets. -->
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<modules>
				<module>org.lunifera.p2.target.juno</module>
			</modules>
		</profile>
		<!-- <profile> -->
		<!-- <id>skip-ui-tests</id> -->
		<!-- <activation> -->
		<!-- <property> -->
		<!-- <name>skip-ui-tests</name> -->
		<!-- </property> -->
		<!-- </activation> -->
		<!-- <properties> -->
		<!-- <tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest> -->
		<!-- </properties> -->
		<!-- </profile> -->
		<!-- <profile> -->
		<!-- <id>macosx</id> -->
		<!-- <activation> -->
		<!-- <os> -->
		<!-- <name>mac os x</name> -->
		<!-- <family>mac</family> -->
		<!-- </os> -->
		<!-- </activation> -->
		<!-- <properties> -->
		<!-- <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs> -->
		<!-- </properties> -->
		<!-- </profile> -->
		<!-- <profile> -->
		<!-- <id>other-os</id> -->
		<!-- <activation> -->
		<!-- <os> -->
		<!-- <name>not-mac</name> -->
		<!-- <family>!mac</family> -->
		<!-- </os> -->
		<!-- </activation> -->
		<!-- <properties> -->
		<!-- <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs> -->
		<!-- </properties> -->
		<!-- </profile> -->
		<!-- This profile is used to gather code coverage for Sonar -->
		<profile>
			<id>codeCoverage</id>
			<properties>
				<!-- Properties to enable jacoco code coverage analysis -->
				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.jacoco.reportPath>../org.demo.camp.nantes.parent/target/jacoco.exec</sonar.jacoco.reportPath>
			</properties>

			<build>
				<plugins>
					<!-- Enabling use of jacoco -->
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.5.8.201207111220</version>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<!-- Where to put jacoco coverage report -->
									<destFile>${sonar.jacoco.reportPath}</destFile>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<repositories>
		<repository>
			<id>BPMN2</id>
			<url>${bpmn2-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>gemini-jpa</id>
			<url>${gemini-jpa-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>m2e-buildhelper</id>
			<url>${m2e-buildhelper-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>m2e-tycho</id>
			<url>${m2e-tycho-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>Orbit</id>
			<url>${orbit-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>Xtext</id>
			<url>${xtext-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>Eclipse</id>
			<url>${eclipse-p2}</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>p2</layout>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>fornax</id>
			<url>http://www.fornax-platform.org/m2/repository</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<!-- <pluginRepository> -->
		<!-- <id>fornax-snapshots</id> -->
		<!-- <url>http://www.fornax-platform.org/archiva/repository/snapshots/</url> -->
		<!-- <snapshots> -->
		<!-- <enabled>true</enabled> -->
		<!-- </snapshots> -->
		<!-- </pluginRepository> -->
		<pluginRepository>
			<id>xtend</id>
			<url>http://build.eclipse.org/common/xtend/maven</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<sourceDirectory>src</sourceDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!-- enable tycho build -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho-version}</version>
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<compilerVersion>1.6</compilerVersion>
						<encoding>UTF-8</encoding>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<resolver>p2</resolver>
						<pomDependencies>consider</pomDependencies>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<includes>
							<include>**/*Tests.java</include>
						</includes>
						<showEclipseLog>true</showEclipseLog>
						<useUIHarness>false</useUIHarness>
						<useUIThread>false</useUIThread>
						<failIfNoTests>false</failIfNoTests>
<!-- 						<appArgLine>-Dfile.encoding=UTF-8</appArgLine> -->
						<argLine>-Dfile.encoding=UTF-8</argLine>
						<!-- Kill test JVM if tests take more than 10 minutes (600 seconds) 
							to finish -->
						<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<workflowEngine>mwe2</workflowEngine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<organization>
		<name>Lunifera.org</name>
		<url>www.lunifera.org</url>
	</organization>
</project>